--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
    <!--
     Program Name:  Photo Gallery Application
-    Author: 
-    Date:   
+    Author: Darielle Hess
+    Date:   6/28/18
     Filename: index.html
    -->    
     
